# automatic-subgoal-discovery-rl

./: .gitignore  README.md  main.py  pyproject.toml
src/: agent.py  agent_environment_interaction.ipynb  core.py  empowerment.py  env.py  experience_buffer.py  experiment.ipynb  experiment.py  heatmap.ipynb  option_learning.py  plot.py  subgoal_discovery.py  trajectory_sampler.py  utils.py
src/experiments/: config_example.json
tests/: confmodules.py  conftest.py  env_test.py  plot_test.py
