[project]
name = "automatic-subgoal-discovery-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "ruff>=0.11.10",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
